# finance-tracker-service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
compose/: Dockerfile  entrypoint.sh
config/: app.py
requirements/: prod.txt
src/: app.py
src/alembic/: env.py
src/alembic/versions/: 5010d816a4a7_.py  e54b2f9a114d_.py
src/config/: __init__.py  security.py
src/db/: __init__.py  config.py  models.py  utils.py
src/enums/: users.py
src/routers/: __init__.py  finances.py  users.py
src/schemas/: __init__.py  finances.py  users.py
src/service/: users.py
